--- a/netflix.css
+++ b/netflix.css
@@ -90,3 +90,22 @@ div{
     height: 100vh;
 
 }
+
+
+@media(max-width: 600px){
+
+    body{
+
+        text-align: center;
+        width: 80%;
+        background-image: url(./str.png);
+        background-size: cover;
+        background-position: center;
+        height: 100%;
+        width: 100%;
+        margin: 0;
+        padding: 0;
+    }
+    
+
+}
